testing and edited intro

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 </div>
                 <div class="intro_content_text">
                     <h1>Trevor Cooper</h1>
-                    <p class="whitetext">Data + Design</p>
-                    <p class="intro_sentence">I dig into data to find patterns and stories.</p>
+                    <p class="whitetext">Hi!</p>
+                    <p class="intro_sentence">I'm a content creator with a data focus.</p>
                 </div>
             </div>
         </div>
