expanded projects section content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,34 @@
                 <div class="intro_content_text">
                     <h1>Trevor Cooper</h1>
                     <p class="whitetext">Hi!</p>
-                    <p class="intro_sentence">I'm a content creator with a data focus.</p>
+                    <p class="intro_sentence">I'm a content creator.</p>
+                </div>
+            </div>
+        </div>
+        <div class="projects">
+            <div class="projects_content_text_and_image">
+                <div class="projects_content_text">
+                    <h2>Projects</h2>
+                    <h3>Illustration</h2>
+                        <p class="project1">2015: <a href="https://www.powells.com/book/-9780451468772/17-0">The Truth Commission</a> by Susan Juby</p>
+                        <div>
+                            <img src="">
+                        </div>
+                    <h3>Design</h2>
+                        <p class="project2">2016: <a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
+                        <div>
+                            <img src="">
+                        </div>
+                    <h3>Writing</h2>
+                        <p class="project1">2015: <a href="https://www.powells.com/book/-9780451468772/17-0">The Truth Commission</a> by Susan Juby</p>
+                            <div>
+                                <img src="">
+                            </div>
+                    <h3>Editing</h2>
+                        <p class="project2">2016: <a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
+                            <div>
+                                <img src="">
+                            </div>
                 </div>
             </div>
         </div>
