new links, updated nav buttons

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <nav class="topnav">
-            <button class="active" href="#home">Trevor</button>
-            <button href="contact">Contact</button>
-            <button href="resume">Resumé</button>
-            <button href="projects">Projects</button>
+            <a class="active" href="#home">Trevor</a>
+            <a href="#contact">Contact</a>
+            <a href="#resume">Resumé</a>
+            <a href="#projects">Projects</a>
             <i class="icon"></i>
         </nav>
         <div class="introduction">
@@ -28,34 +28,49 @@
                 </div>
             </div>
         </div>
-        <div class="projects">
+        <div id="projects" class="projects">
             <div class="projects_content_text_and_image">
                 <div class="projects_content_text">
                     <h2>Projects</h2>
                     <h3>Illustration</h2>
-                        <p class="project1">2015: <a href="https://www.powells.com/book/-9780451468772/17-0">The Truth Commission</a> by Susan Juby</p>
+                        <p class="project1"><a href="https://www.powells.com/book/-9780451468772/17-0">The Truth Commission</a> by Susan Juby</p>
                         <div>
                             <img src="">
                         </div>
                     <h3>Design</h2>
-                        <p class="project2">2016: <a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
+                        <p class="project2"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
                         <div>
                             <img src="">
                         </div>
-                    <h3>Writing</h2>
-                        <p class="project1">2015: <a href="https://www.powells.com/book/-9780451468772/17-0">The Truth Commission</a> by Susan Juby</p>
+                        <p class="project3"><a href="https://www.maritimeed.com/">Western Maritime Institute</a> logo</p>
+                        <div>
+                            <img src="">
+                        </div>
+                        <p class="project4"><a href="https://www.ypnanaimo.com/">Young Professionals of Nanaimo</a> initial logo</p>
+                        <div>
+                            <img src="">
+                        </div>
+                    <h3>Writing and editing</h2>
+                        <p class="project5"><a href="https://issuu.com/viuportalmagazine/docs/portal2014">Portal magazine 2014</a></p>
                             <div>
                                 <img src="">
                             </div>
-                    <h3>Editing</h2>
-                        <p class="project2">2016: <a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
+                    <h3>****</h2>
+                        <p class="project6"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
                             <div>
                                 <img src="">
                             </div>
                 </div>
             </div>
         </div>
-        <footer class="foot">
+        <div id="resume" class="resume">
+            <div class="resume_content_text_and_image">
+                <div class="resume_content_text">
+                    <h2>Resumé highlights</h2>
+                </div>
+            </div>
+        </div>
+        <footer id="contact" class="foot">
             <div class="foot_contact">
                 <a class="email_link" href="mailto:coopstah@gmail.com">
                     <i class="fa-solid fa-envelope"></i>
