added portfolio content imgs

--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
                 <div class="projects_content_text">
                     <h2>Projects</h2>
                     <h3>Illustration</h2>
-                        <p class="project1"><a href="https://www.powells.com/book/-9780451468772/17-0">The Truth Commission</a> by Susan Juby</p>
+                        <p class="project1">Susan Juby's <a href="https://www.powells.com/book/-9780451468772/17-0">The Truth Commission</a> (Penguin Random House)</p>
                         <div>
-                            <img src="">
+                            <img src="truthcomm_neil.png">
+                            <img src="truthcommkeira.png">
+                            <img src="truthcomm_foot.png">
+                            <img src="truthcomm_puppy.png">
                         </div>
                     <h3>Design</h2>
                         <p class="project2"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
                         <div>
-                            <img src="">
+                            <img src="makerspace_logo_2.svg">
                         </div>
                         <p class="project3"><a href="https://www.maritimeed.com/">Western Maritime Institute</a> logo</p>
                         <div>
@@ -48,7 +51,7 @@
                         </div>
                         <p class="project4"><a href="https://www.ypnanaimo.com/">Young Professionals of Nanaimo</a> initial logo</p>
                         <div>
-                            <img src="">
+                            <img src="ypn.svg">
                         </div>
                     <h3>Writing and editing</h2>
                         <p class="project5"><a href="https://issuu.com/viuportalmagazine/docs/portal2014">Portal magazine 2014</a></p>
