added new images and cleaned up CSS

--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
                     <h2>Projects</h2>
                     <h3>Illustration</h2>
                         <p class="project1">Susan Juby's <a href="https://www.powells.com/book/-9780451468772/17-0">The Truth Commission</a> (Penguin Random House)</p>
-                        <div>
+                        <div class="truth_img_container">
+                            <img src="truthcomm_puppy.png">
                             <img src="truthcomm_neil.png">
                             <img src="truthcommkeira.png">
                             <img src="truthcomm_foot.png">
-                            <img src="truthcomm_puppy.png">
                         </div>
                     <h3>Design</h2>
                         <p class="project2"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
-                        <div>
-                            <img src="makerspace_logo_2.svg">
+                        <div class="design1_container">
+                            <img src="makerspace_logo.svg">
                         </div>
                         <p class="project3"><a href="https://www.maritimeed.com/">Western Maritime Institute</a> logo</p>
-                        <div>
-                            <img src="">
+                        <div class="design2_container">
+                            <img src="WMI_logo.png">
                         </div>
-                        <p class="project4"><a href="https://www.ypnanaimo.com/">Young Professionals of Nanaimo</a> initial logo</p>
-                        <div>
-                            <img src="ypn.svg">
+                        <p class="design3"><a href="">VIU Creative Writing</a> ad</p>
+                        <div class="logo3_container">
+                            <img src="">
                         </div>
                     <h3>Writing and editing</h2>
                         <p class="project5"><a href="https://issuu.com/viuportalmagazine/docs/portal2014">Portal magazine 2014</a></p>
@@ -81,7 +81,9 @@
                 <a class="github_link" href="https://github.com/TrevCoop">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <i class="fa-brands fa-linkedin"></i>
+                <a class="linkedin_link" href="https://www.linkedin.com/in/trevcoop/">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
                 <button class="dl_cv" onclick="location.href='https://www.google.com'" type="button">Download CV</button>
                 <p class="copy_date">Design <span class=”copy-left”>&copy;</span> 2023 Trevor Cooper</p>
 
