fixed some responsive CSS image bugs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="intro_content_text">
                     <h1>Trevor Cooper</h1>
                     <p class="whitetext">Hi!</p>
-                    <p class="intro_sentence">I'm a content creator.</p>
+                    <p class="intro_sentence">I'm a content creator</p>
                 </div>
             </div>
         </div>
