--- a/index.html
+++ b/index.html
@@ -32,33 +32,32 @@
             <div class="projects_content_text_and_image">
                 <div class="projects_content_text">
                     <h2>Projects</h2>
-                    <h3>Illustration</h2>
-                        <p class="project1">Susan Juby's <a href="https://www.powells.com/book/-9780451468772/17-0">The Truth Commission</a> (Penguin Random House)</p>
+                    <h3>Illustration</h3>
                         <div class="truth_img_container">
                             <img src="truthcomm_puppy.png">
                             <img src="truthcomm_neil.png">
                             <img src="truthcommkeira.png">
                             <img src="truthcomm_foot.png">
                         </div>
-                    <h3>Design</h2>
-                        <p class="project2"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
+                        <p class="project1">Susan Juby's <a href="https://www.powells.com/book/-9780451468772/17-0"><em>The Truth Commission</em></a></p>
+                        <small>Published 2015 by Penguin Random House</small>
+                    <h3>Design</h3>
                         <div class="design1_container">
                             <img src="makerspace_logo.svg">
+                            <p class="project2"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
                         </div>
-                        <p class="project3"><a href="https://www.maritimeed.com/">Western Maritime Institute</a> logo</p>
-                        <div class="design2_container">
-                            <img src="WMI_logo.png">
-                        </div>
-                        <p class="design3"><a href="">VIU Creative Writing</a> ad</p>
-                        <div class="logo3_container">
+                    </br>
+                        <div class="logo2_container">
                             <img src="">
+                            <p class="project3"><a href="">VIU Creative Writing</a> ad</p>
                         </div>
-                    <h3>Writing and editing</h2>
-                        <p class="project5"><a href="https://issuu.com/viuportalmagazine/docs/portal2014">Portal magazine 2014</a></p>
-                            <div>
-                                <img src="">
-                            </div>
-                    <h3>****</h2>
+                    <h3>Writing, editing and print production</h3>
+                        <div class="portal2014">
+                            <a href="https://issuu.com/viuportalmagazine/docs/portal2014" alt="Portal 2014: Surreal red magazine with figures holding picture frames to their faces on the cover"><img src="portal_2014.jpg"></a>
+                            <p class="project4"><a href="https://issuu.com/viuportalmagazine/docs/portal2014">Portal magazine 2014</a></p>
+                            <small>Cover design by Reese Patterson</small>
+                        </div>
+                    <h3>****</h3>
                         <p class="project6"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
                             <div>
                                 <img src="">
@@ -71,9 +70,54 @@
                 <div class="resume_content_text">
                     <h2>Resumé highlights</h2>
                 </div>
+                <div>
+                    
+                    <h3>Skills and Technology</h3>
+                        <ul>
+                            <li><strong>Research, writing and editing</strong> - Technical writing, marketing copywriting and copyediting, creative writing</li>
+                            <li><strong>Information design</strong> - Print or digital media layouts, infographics, charts and graphs</li>
+                            <li><strong>Graphic design and illustration</strong> - Logos, advertising, illustrated children's books, comics</li>
+                            <li><strong>Microsoft Office</strong> - Excel, Word, PowerPoint</li>
+                            <li><strong>Adobe</strong> - Illustrator, PS, InDesign, Acrobat</li>
+                            <li><strong>Other creative software tools</strong> - GIMP, Inkscape, Figma, Canva, 3D modeling software</li>
+                            <li><strong>Google</strong> - Sheets, Docs, Slides, Forms, Drive, Gmail, Chat</li>
+                            <li><strong>CRM software</strong> - HubSpot</li>
+                            <li><strong>Collaboration tools</strong> - Zoom, Slack, Discord, Notion, Loom, Shortcut</li>
+                            <li><strong>SQL</strong> - PostgreSQL, BigQuery, DataGrip</li>
+                            <li><strong>Version control</strong> - Git and GitHub</li>
+                            <li><strong>Development</strong> - HTML5, CSS3, Visual Studio Code</li>
+                            <li><strong>Windows/Mac OS</strong> - Including command line tools</li>
+                            <li><strong>In-progress</strong> - R language, Python3, Tableau, ChatGPT4, grant writing</li>
+                        </ul>
+                    <h3>Work</h3>
+                        <ul>
+                            <li>Data specialist (remote), MotionHall</li>
+                            <li>Administration assistant, Axium Law Corporation</li>
+                            <li>Designer & illustrator, freelance (past clients: Penguin Random House, Western Maritime Institute)</li>
+                            <li>Production manager, ad manager & feature contributor, Portal magazine</li>
+                        </ul>
+                    <h3>Education</h3>
+                        <ul>
+                            <li>Google Data Analytics Professional Certificate, Coursera (In-progress)</li>
+                            <li>Technical Writing, BCIT</li>
+                            <li>Bachelor of Arts - Visual arts, creative writing and philosophy, Vancouver Island University</li>
+                        </ul>
+                    <h3>Hobbies</h3>
+                        <ul>
+                            <li>Local flora identification</li>
+                            <li>Hiking and exploring Vancouver Island</li>
+                            <li>Gardening</li>
+                        </ul>
+                </div>
             </div>
         </div>
-        <footer id="contact" class="foot">
+        <div id="contact">
+            <div class="contact_text">
+                <h2>Contact</h2>
+                <p>I live near Nanaimo, BC. I am also open to remote work.</br> <a href="mailto:coopstah@gmail.com">Email</a> me or connect on <a href="https://www.linkedin.com/in/trevcoop/">LinkedIn</a>.</p>
+            </div>
+        </div>
+        <footer class="foot">
             <div class="foot_contact">
                 <a class="email_link" href="mailto:coopstah@gmail.com">
                     <i class="fa-solid fa-envelope"></i>
