final tweaks to resume section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="intro_content_text">
                     <h1>Trevor Cooper</h1>
                     <p class="whitetext">Hi!</p>
-                    <p class="intro_sentence">I'm a content creator</p>
+                    <p class="intro_sentence">I'm a content creator with a data focus</p>
                 </div>
             </div>
         </div>
@@ -57,11 +57,6 @@
                             <p class="project4"><a href="https://issuu.com/viuportalmagazine/docs/portal2014">Portal magazine 2014</a></p>
                             <small>Cover design by Reese Patterson</small>
                         </div>
-                    <h3>****</h3>
-                        <p class="project6"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
-                            <div>
-                                <img src="">
-                            </div>
                 </div>
             </div>
         </div>
@@ -74,18 +69,20 @@
                     
                     <h3>Skills and Technology</h3>
                         <ul>
-                            <li><strong>Research, writing and editing</strong> - Technical writing, marketing copywriting and copyediting, creative writing</li>
-                            <li><strong>Information design</strong> - Print or digital media layouts, infographics, charts and graphs</li>
-                            <li><strong>Graphic design and illustration</strong> - Logos, advertising, illustrated children's books, comics</li>
+                            <li><strong>Research, writing and editing</strong> - Technical writing and documentation, marketing copywriting and copyediting, creative writing</li>
+                            <li><strong>Data analysis</strong> - Data cleaning, annotating, munging, analysis, reporting</li>
+                            <li><strong>Management experience</strong></li>
+                            <li><strong>Information design</strong> - Print or digital media layouts, infographics, charts</li>
+                            <li><strong>Graphic design and illustration</strong> - Logos and branding, ad copy and design, illustrated books</li>
                             <li><strong>Microsoft Office</strong> - Excel, Word, PowerPoint</li>
-                            <li><strong>Adobe</strong> - Illustrator, PS, InDesign, Acrobat</li>
-                            <li><strong>Other creative software tools</strong> - GIMP, Inkscape, Figma, Canva, 3D modeling software</li>
+                            <li><strong>Adobe</strong> - Illustrator, PhotoShop, InDesign, Acrobat Pro</li>
                             <li><strong>Google</strong> - Sheets, Docs, Slides, Forms, Drive, Gmail, Chat</li>
                             <li><strong>CRM software</strong> - HubSpot</li>
                             <li><strong>Collaboration tools</strong> - Zoom, Slack, Discord, Notion, Loom, Shortcut</li>
                             <li><strong>SQL</strong> - PostgreSQL, BigQuery, DataGrip</li>
                             <li><strong>Version control</strong> - Git and GitHub</li>
                             <li><strong>Development</strong> - HTML5, CSS3, Visual Studio Code</li>
+                            <li><strong>Other creative tools</strong> - GIMP, Inkscape, Figma, Canva, 3D modeling software</li>
                             <li><strong>Windows/Mac OS</strong> - Including command line tools</li>
                             <li><strong>In-progress</strong> - R language, Python3, Tableau, ChatGPT4, grant writing</li>
                         </ul>
@@ -104,7 +101,6 @@
                         </ul>
                     <h3>Hobbies</h3>
                         <ul>
-                            <li>Local flora identification</li>
                             <li>Hiking and exploring Vancouver Island</li>
                             <li>Gardening</li>
                         </ul>
