added management experience to resume

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <ul>
                             <li><strong>Research, writing and editing</strong> - Technical writing and documentation, marketing copywriting and copyediting, creative writing</li>
                             <li><strong>Data analysis</strong> - Data cleaning, annotating, munging, analysis, reporting</li>
-                            <li><strong>Management experience</strong></li>
+                            <li><strong>Management experience</strong> - Instructing and managing Odetta.ai data delivery work</li>
                             <li><strong>Information design</strong> - Print or digital media layouts, infographics, charts</li>
                             <li><strong>Graphic design and illustration</strong> - Logos and branding, ad copy and design, illustrated books</li>
                             <li><strong>Microsoft Office</strong> - Excel, Word, PowerPoint</li>
@@ -124,7 +124,7 @@
                 <a class="linkedin_link" href="https://www.linkedin.com/in/trevcoop/">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
-                <button class="dl_cv" onclick="location.href='https://www.google.com'" type="button">Download CV</button>
+                <button class="dl_cv" onclick="location.href="https://www.google.com" type="button">Download CV</button>
                 <p class="copy_date">Design <span class=”copy-left”>&copy;</span> 2023 Trevor Cooper</p>
 
             </div>
