--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <ul>
                             <li><strong>Research, writing and editing</strong> - Technical writing and documentation, marketing copywriting and copyediting, creative writing</li>
                             <li><strong>Data analysis</strong> - Data cleaning, annotating, munging, analysis, reporting</li>
-                            <li><strong>Management experience</strong> - Instructing and managing Odetta.ai data delivery work</li>
+                            <li><strong>Management experience</strong> - Instructing and managing Odetta.ai data delivery work for lead generation</li>
                             <li><strong>Information design</strong> - Print or digital media layouts, infographics, charts</li>
                             <li><strong>Graphic design and illustration</strong> - Logos and branding, ad copy and design, illustrated books</li>
                             <li><strong>Microsoft Office</strong> - Excel, Word, PowerPoint</li>
