hiding .logo2_container until I can find the .png file

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                             <img src="makerspace_logo.svg">
                             <p class="project2"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
                         </div>
-                    </br>
                         <div class="logo2_container">
+                            </br>
                             <img src="">
                             <p class="project3"><a href="">VIU Creative Writing</a> ad</p>
                         </div>
@@ -66,7 +66,6 @@
                     <h2>Resumé highlights</h2>
                 </div>
                 <div>
-                    
                     <h3>Skills and Technology</h3>
                         <ul>
                             <li><strong>Research, writing and editing</strong> - Technical writing and documentation, marketing copywriting and copyediting, creative writing</li>
@@ -88,16 +87,16 @@
                         </ul>
                     <h3>Work</h3>
                         <ul>
-                            <li>Data specialist (remote), MotionHall</li>
-                            <li>Administration assistant, Axium Law Corporation</li>
-                            <li>Designer & illustrator, freelance (past clients: Penguin Random House, Western Maritime Institute)</li>
-                            <li>Production manager, ad manager & feature contributor, Portal magazine</li>
+                            <li>Data specialist (remote), <em>MotionHall</em></li>
+                            <li>Administration assistant, <em>Axium Law Corporation</em></li>
+                            <li>Designer & illustrator, <em>freelance (Past clients: Penguin Random House, Western Maritime Institute)</em></li>
+                            <li>Production manager, ad manager & feature contributor, <em>Portal magazine</em></li>
                         </ul>
                     <h3>Education</h3>
                         <ul>
-                            <li>Google Data Analytics Professional Certificate, Coursera (In-progress)</li>
-                            <li>Technical Writing, BCIT</li>
-                            <li>Bachelor of Arts - Visual arts, creative writing and philosophy, Vancouver Island University</li>
+                            <li>Google Data Analytics Professional Certificate, <em>Coursera (In-progress)</em></li>
+                            <li>Technical Writing, <em>BCIT</em></li>
+                            <li>Bachelor of Arts - Visual arts, creative writing and philosophy, <em>Vancouver Island University</em></li>
                         </ul>
                     <h3>Hobbies</h3>
                         <ul>
