--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                             <p class="project3"><a href="">VIU Creative Writing</a> ad</p>
                         </div>
                     <h3>Writing, editing and print production</h3>
-                        <div class="portal2014">
-                            <a href="https://issuu.com/viuportalmagazine/docs/portal2014" alt="Portal 2014: Surreal red magazine with figures holding picture frames to their faces on the cover"><img src="portal_2014.jpg"></a>
+                        <div>
+                            <div class="portal2014">
+                                <a href="https://issuu.com/viuportalmagazine/docs/portal2014" alt="Portal 2014: Surreal red magazine with figures holding picture frames to their faces on the cover"><img src="portal_2014.jpg"></a>
+                            </div>
                             <p class="project4"><a href="https://issuu.com/viuportalmagazine/docs/portal2014">Portal magazine 2014</a></p>
                             <small>Cover design by Reese Patterson</small>
                         </div>
@@ -69,7 +71,7 @@
                     <h3>Skills and Technology</h3>
                         <ul>
                             <li><strong>Research, writing and editing</strong> - Technical writing and documentation, marketing copywriting and copyediting, creative writing</li>
-                            <li><strong>Data analysis</strong> - Data cleaning, annotating, munging, analysis, reporting</li>
+                            <li><strong>Data work</strong> - Data wrangling, cleaning, annotating, analysis, reporting</li>
                             <li><strong>Management experience</strong> - Instructing and managing Odetta.ai data delivery work for lead generation</li>
                             <li><strong>Information design</strong> - Print or digital media layouts, infographics, charts</li>
                             <li><strong>Graphic design and illustration</strong> - Logos and branding, ad copy and design, illustrated books</li>
@@ -77,9 +79,9 @@
                             <li><strong>Adobe</strong> - Illustrator, PhotoShop, InDesign, Acrobat Pro</li>
                             <li><strong>Google</strong> - Sheets, Docs, Slides, Forms, Drive, Gmail, Chat</li>
                             <li><strong>CRM software</strong> - HubSpot</li>
-                            <li><strong>Collaboration tools</strong> - Zoom, Slack, Discord, Notion, Loom, Shortcut</li>
                             <li><strong>SQL</strong> - PostgreSQL, BigQuery, DataGrip</li>
                             <li><strong>Version control</strong> - Git and GitHub</li>
+                            <li><strong>Collaboration tools</strong> - Zoom, Slack, Discord, Notion, Loom, Shortcut</li>
                             <li><strong>Development</strong> - HTML5, CSS3, Visual Studio Code</li>
                             <li><strong>Other creative tools</strong> - GIMP, Inkscape, Figma, Canva, 3D modeling software</li>
                             <li><strong>Windows/Mac OS</strong> - Including command line tools</li>
@@ -87,16 +89,16 @@
                         </ul>
                     <h3>Work</h3>
                         <ul>
-                            <li>Data specialist (remote), <em>MotionHall</em></li>
+                            <li>Data specialist, <em>MotionHall</em></li>
                             <li>Administration assistant, <em>Axium Law Corporation</em></li>
-                            <li>Designer & illustrator, <em>freelance (Past clients: Penguin Random House, Western Maritime Institute)</em></li>
+                            <li>Designer & illustrator, <em>freelance (past clients include Penguin Random House, Western Maritime Institute)</em></li>
                             <li>Production manager, ad manager & feature contributor, <em>Portal magazine</em></li>
                         </ul>
                     <h3>Education</h3>
                         <ul>
-                            <li>Google Data Analytics Professional Certificate, <em>Coursera (In-progress)</em></li>
+                            <li>Google Data Analytics Professional Certificate, <em>Coursera (in-progress)</em></li>
                             <li>Technical Writing, <em>BCIT</em></li>
-                            <li>Bachelor of Arts - Visual arts, creative writing and philosophy, <em>Vancouver Island University</em></li>
+                            <li>Bachelor of Arts - Fine arts, writing and philosophy, <em>Vancouver Island University</em></li>
                         </ul>
                     <h3>Hobbies</h3>
                         <ul>
