html and css validation

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                     <h2>Projects</h2>
                     <h3>Illustration</h3>
                         <div class="truth_img_container">
-                            <img src="truthcomm_puppy.png">
-                            <img src="truthcomm_neil.png">
-                            <img src="truthcommkeira.png">
-                            <img src="truthcomm_foot.png">
+                            <img src="truthcomm_puppy.png" alt="A drawing of a puppy cuddling a kitchen knife">
+                            <img src="truthcomm_neil.png" alt="A drawing of a young person with slicked back hair and poorly-fitting suit">
+                            <img src="truthcommkeira.png" alt="A drawing of a waifish person with long flowing hair">
+                            <img src="truthcomm_foot.png" alt="A drawing of a severed foot with a sticky note that says 'note to reader'">
                         </div>
                         <p class="project1">Susan Juby's <a href="https://www.powells.com/book/-9780451468772/17-0"><em>The Truth Commission</em></a></p>
                         <small>Published 2015 by Penguin Random House</small>
@@ -47,14 +47,14 @@
                             <p class="project2"><a href="https://makerspacenanaimo.org/">Makerspace Nanaimo</a> logo</p>
                         </div>
                         <div class="logo2_container">
-                            </br>
-                            <img src="">
+                            <br>
+                            <img src="" alt="An ad for the Vancouver Island University Creative Writing Department that says 'Write for you.'">
                             <p class="project3"><a href="">VIU Creative Writing</a> ad</p>
                         </div>
                     <h3>Writing, editing and print production</h3>
                         <div>
                             <div class="portal2014">
-                                <a href="https://issuu.com/viuportalmagazine/docs/portal2014" alt="Portal 2014: Surreal red magazine with figures holding picture frames to their faces on the cover"><img src="portal_2014.jpg"></a>
+                                <a href="https://issuu.com/viuportalmagazine/docs/portal2014"><img src="portal_2014.jpg" alt="Portal 2014: Surreal red magazine with figures holding picture frames to their faces on the cover"></a>
                             </div>
                             <p class="project4"><a href="https://issuu.com/viuportalmagazine/docs/portal2014">Portal magazine 2014</a></p>
                             <small>Cover design by Reese Patterson</small>
@@ -111,7 +111,7 @@
         <div id="contact">
             <div class="contact_text">
                 <h2>Contact</h2>
-                <p>I live near Nanaimo, BC. I am also open to remote work.</br> <a href="mailto:coopstah@gmail.com">Email</a> me or connect on <a href="https://www.linkedin.com/in/trevcoop/">LinkedIn</a>.</p>
+                <p>I live near Nanaimo, BC. I am also open to remote work.<br> <a href="mailto:coopstah@gmail.com">Email</a> me or connect on <a href="https://www.linkedin.com/in/trevcoop/">LinkedIn</a>.</p>
             </div>
         </div>
         <footer class="foot">
