added google analytics script tag to html

--- a/index.html
+++ b/index.html
@@ -131,5 +131,14 @@
             </div>
         </footer>
         <script src="https://kit.fontawesome.com/aba12f9db8.js" crossorigin="anonymous"></script> <!-- Can put this in .js file when I get around to it. -->
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-4SBDE4V51N"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-4SBDE4V51N');
+        </script>
     </body>
 </html>
