trying out CSS fix for non-working gradient in IE

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <li><strong>Adobe</strong> - Illustrator, PhotoShop, InDesign, Acrobat Pro</li>
                             <li><strong>Google</strong> - Sheets, Docs, Slides, Forms, Drive, Gmail, Chat</li>
                             <li><strong>CRM software</strong> - HubSpot</li>
-                            <li><strong>SQL</strong> - PostgreSQL, BigQuery, DataGrip</li>
+                            <li><strong>SQL</strong> - PostgreSQL, DataGrip</li>
                             <li><strong>Version control</strong> - Git and GitHub</li>
                             <li><strong>Collaboration tools</strong> - Zoom, Slack, Discord, Notion, Loom, Shortcut</li>
                             <li><strong>Development</strong> - HTML5, CSS3, Visual Studio Code</li>
