removed some in-progress skills I don't intend to continue on with from html resume

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <li><strong>Development</strong> - HTML5, CSS3, Visual Studio Code</li>
                             <li><strong>Other creative tools</strong> - GIMP, Inkscape, Figma, Canva, 3D modeling software</li>
                             <li><strong>Windows/Mac OS</strong> - Including command line tools</li>
-                            <li><strong>In-progress</strong> - R language, Python3, Tableau, ChatGPT4, grant writing</li>
+                            <li><strong>In-progress</strong> - Python3, Tableau</li>
                         </ul>
                     <h3>Work</h3>
                         <ul>
