another edit to resume skills

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <li><strong>Version control</strong> - Git and GitHub</li>
                             <li><strong>Collaboration tools</strong> - Zoom, Slack, Discord, Notion, Loom, Shortcut</li>
                             <li><strong>Development</strong> - HTML5, CSS3, Visual Studio Code</li>
-                            <li><strong>Other creative tools</strong> - GIMP, Inkscape, Figma, Canva, 3D modeling software</li>
+                            <li><strong>Other creative tools</strong> - GIMP, Inkscape</li>
                             <li><strong>Windows/Mac OS</strong> - Including command line tools</li>
                             <li><strong>In-progress</strong> - Python3, Tableau</li>
                         </ul>
